fixed a tiny visual bug with alignment of toplinks

--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
 
 #links-bar {
     margin: 0;
+    padding: 0;
     position: sticky;
     top: 0;
     background-color: var(--primary-color);
